Make sure query parameter values are strings, add integration test for headers too
